# matomo-mcp

./: .coveragerc  .dockerignore  .env.example  .gitignore  API_REFERENCE.md  CHANGELOG.md  DEPLOY_GLAMA.md  Dockerfile  GITHUB_ACTIONS.md  INSTALL_WINDOWS.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TESTING_COMPLETE.md  TEST_REPORT.md  USAGE.md  claude_desktop_config.json  install.sh  pyproject.toml  test_mcp_protocol.py  test_mcp_server.py
.github/: dependabot.yml
.github/workflows/: GITHUB_ACTIONS_SETUP.md  lint.yml  release.yml  test.yml
examples/: claude_config.json
matomo_mcp/: client.py  server.py
tests/: __init__.py  test_client.py
